--- a/src/pages/bio/index.html
+++ b/src/pages/bio/index.html
@@ -1,4 +1,29 @@
-<div class="grid-x grid-padding-x">
+<div class="bio-wrapper bio">
+  <div class="container">
+    <main class="main-content">
+      <div class="bio-cell-1">
+        <div class="">
+          <img src="{{root}}assets/img/bryanCee--laughing.jpg">
+          <p class="">Good Wibes, Good Times</p>
+        </div>
+      </div>
+      <div class="bio-cell-2">
+        <h1>Bryan's Bio</h1>
+        <p>Bryan Cee was born and raised in Fox hill, the oldest village in Nassau Bahamas. Not being born to a musical family he stood apart because music would become the essence of his entire being.</p>
+        <p>Although he was quite eclectic, Bryan was inspired by the music of Bob Marley, Beres Hammond, Bjork, Enya Tony mckay, and Ray Charles.</p>
+        <p>Originally a poet, Bryan Cee portrayed a different aspect of his personality, through his introspective and conscious lyrics. By being exposed to Classical music from a very young age, he grew fond of the piano and began his studies at 17.</p>
+        <p>From there he received a Bachelors degree in music studies from St. Johns University, majoring in Piano, Organ, and Tuba. He then furthered his studies by attaining a masters in piano at Mcnally Smith college of music.</p>
+        <p>Mr. Cee has performed both locally in the Bahamas and abroad on several festivals including the Global Battle of the Bands where he shared the stage with Ira Storr and K.B.</p>
+        <p>In 2012 Bryan Cee represented the Bahamas in Atlanta's annual Caribbean festival where they also featured Bunji Garland, Damarco, and Kerwin Du Bois.</p>
+        <p>Since 2014 he has been touring in the United States performing extensively at numerous festivals including Global market festival, Secret Circus, Winter Carnival,and River front prototype festival.</p>
+        <p>In 2015 Bryan Cee and his band The Wibesmen backed and opened for Jamaican reggae artist Chuck Fender during the Warning tour.</p>
+        <p>By 2016 Bryan Cee completed his first album called "The Wibe Of life" which included his first single "Long Lost Brother" which was released with a music Video in late 2012.</p>
+        <p>He insists that his only Goal in life is to bring Conscious Encouragement for Everyone, through his enlightening tales and uplifting music!</p>
+      </div>
+    </main>
+  </div>
+</div>
+<!-- <div class="grid-x grid-padding-x">
   <div class="medium-4 cell bg-yellow padding-top">
     <div class="responsive-media">
       <img src="{{root}}assets/img/bryanCee--laughing.jpg">
@@ -16,7 +41,7 @@
     <p>Since 2014 he has been touring in the United States performing extensively at numerous festivals including Global market festival, Secret Circus, Winter Carnival,and River front prototype festival.</p>
     <p>In 2015 Bryan Cee and his band The Wibesmen backed and opened for Jamaican reggae artist Chuck Fender during the Warning tour.</p>
     <p>By 2016 Bryan Cee completed his first album called "The Wibe Of life" which included his first single "Long Lost Brother" which was released with a music Video in late 2012.</p>
-    <p>He insists that his only Goal in life is to bring Conscious Encouragement for Everyone, through his enlightening tales and uplifting music!</p>
+    <p>He insists that his only Goal in life is to bring Conscious Encouragement for Everyone, through his enlightening tales and uplifting music!</p> -->
 	
 <!-- <h2>Introduction</h2> -->
     <!-- <p class="lead">Many people have lots of metaphors for life.</p>
@@ -54,5 +79,5 @@
     <p>Winter Carnival,and River front prototype festival. In 2015 the Wibesmen backed and opened for Jamaican reggae artist Chuck Fender during the Warning tour.</p>
     <p>By 2016 Bryan Cee completed his first album called "The Wibe Of life" which included his first single "Long Lost Brother" which was released with a music Video in late 2012.</p>
     <p>He insists that his only Goal in life is to bring Conscious Encouragement for Everyone, through his enlightening tales and uplifting music!</p> -->
-  </div>
-</div>
+  <!-- </div>
+</div> -->
